fix: used react portals to fix z-index issues

--- a/src/containers/Testing/TestingSidebar.css
+++ b/src/containers/Testing/TestingSidebar.css
@@ -42,7 +42,6 @@
 }
 
 #TestSidebar.open {
-  z-index: 20;
   overflow: hidden;
   transform: none !important;
 }
@@ -95,7 +94,7 @@
 }
 
 #TestSettings.open {
-  z-index: 10;
+  /* z-index: 10; */
   transform: translateX(-400px);
 }
 
@@ -220,6 +219,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 1;
   display: flex;
   align-items: center;
   width: 600px;
